tests/interpreter/binary-expression-less-bad-types.stderr
error: cannot compare 'Number' with 'String'
 --> $DIR/binary-expression-less-bad-types.lox:1:1
  |
1 | 10 < "foo";
  | ^^^^^^^^^^
